--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -301,6 +301,11 @@ Summary (one line each)
 - Method 2: Best for exact, pointwise, causal analysis in free space; good for calibration and sparsely sampled validation.
 - Method 3: Best for dynamics of many particles/assemblies under the canonical law; scales and matches axioms directly.
 
+Operational guidance — when to use which method
+- Method 1 (PDE): use this for whole-field grid simulations, visualization, and complex media or boundaries; step the wave PDE forward with a smeared source. Robust when an emitter slows or stops.
+- Method 2 (Path history integral): use this for closed forms, analytic insight, or sparse probe evaluation; enforce the retarded-time condition $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and handle the geometric factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ in evaluation; solve one root per (observer, time) pair in slow-motion, more if sources move fast.
+- Method 3 (Event-driven canonical): use this for production many-body dynamics; find causal roots and sum per-hit $1/r^2$ pushes; prefer $\eta$-mollified mode for smooth ODEs when needed.
+
 ## Pros and cons (comparative)
 
 Method 1 — Time-based PDE (wave equation)
@@ -339,10 +344,21 @@ Method 3 — Event-driven radial-transport + per-hit EOM (current canonical)
 
 - Use Method 3 as the primary engine for particle dynamics and assemblies. It matches the model’s axioms (radial-only action, constant emission cadence) and scales well.
 - Adopt Method 2 as the analytic reference for calibration and validation. Calibrate $\kappa$ so simple benchmarks (stationary/slow sources, symmetric binaries) agree between Methods 2 and 3 at the per-hit level; do not introduce any per-hit emitter-speed weighting.
+- Baseline formula (stationary emitter at origin): with $q(t)\equiv q_0$, $\displaystyle \phi(r,t)=\frac{q_0}{4\pi r}$ since the path history condition selects $\tau=t-r/c$; if $q$ varies, $\displaystyle \phi(r,t)=\frac{q(t-r/c)}{4\pi r}$.
 - Reserve Method 1 for full-field studies (visualization, media, boundary effects) and for end-to-end tests of numerical stability; it is valuable but unnecessary for routine ODE-based assembly simulations.
 - Documentation/actionables: keep the continuity-form field definition and per-hit EOM as the canonical statement; add a brief appendix mapping densities (Method 3) to potentials (Method 2) to clarify when $1/r$ vs $1/r^2$ factors appear and how calibration preserves totals.
+- Numerical cautions (quick checklist):
+  - Always smear $\delta(\mathbf{x}-\mathbf{x}_s)$ to a normalized kernel of width $\sigma$ comparable to the grid spacing in PDE runs to avoid grid-scale artifacts.
+  - Enforce CFL: choose $\Delta t$ so that $c\,\Delta t/\Delta x$ meets the stability bound for the chosen stencil to prevent instability.
+  - Path history solving: solve $t-\tau=r(\tau)/c$ carefully; near $|\mathbf{v}_s|\approx c$, root finding and the factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ require extra care.
+  - Finite temporal thickness: if shells have duration, replace $\delta(t-\tau)$ with a smooth profile to model finite-width wavefronts.
 
 Plain language: Keep using the event-driven, radial-only method for dynamics, check it against the retarded integral to set the knobs, and bring out the PDE only when you need whole-field pictures or complex media.
+
+Recap (in three lines)
+- Model sources as $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$ (time-based emission density).
+- Method 1: easiest for grid-based whole-field runs; shells emerge at speed $c$.
+- Method 2: exact retarded formula; contributions occur only when $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$, with amplitude decaying as $1/(4\pi r)$ and a geometric $1-\mathbf{n}\cdot\mathbf{v}_s/c$ factor in evaluation.
 
 ---
 
