--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -79,7 +79,7 @@ Here $q(t)$ has units “amplitude per unit time.” The finite-speed wave opera
 
 ---
 
-# 2) Integral (Green’s function / retarded potential) approach
+# 2) Integral (Green’s function / path-history potential) approach
 
 **Physical idea:** instead of evolving a PDE in time, write the solution as the sum of contributions from every past emission. For the wave equation the contribution from an impulse emitted at time $\tau$ and place $\mathbf{x}_s(\tau)$ arrives at a field point $\mathbf{x}$ only at the **retarded time** when the spherical shell reaches $\mathbf{x}$. The Green’s function neatly encodes the expanding shell.
 
@@ -128,9 +128,9 @@ $$
 
 * $q(\tau)$ is the continuous emission density per unit time at the emission instant $\tau$. For a steady source, $q(\tau)=q_0$ (constant); more generally, $q$ may vary smoothly with $\tau$.
 
-### Evaluating the integral — the retarded time
+### Evaluating the integral — the path-history time
 
-The $\delta$-function in the integrand enforces the *retarded-time condition*:
+The $\delta$-function in the integrand enforces the *path-history-time condition*:
 
 $$
 t - \tau = \frac{r(\tau)}{c}, \qquad r(\tau)\equiv |\mathbf{x}-\mathbf{x}_s(\tau)|.
@@ -138,7 +138,7 @@ $$
 
 So the contribution to $\phi(\mathbf{x},t)$ comes only from times $\tau$ such that the expanding spherical shell emitted at $\tau$ has just reached $\mathbf{x}$ at time $t$.
 
-Mathematically, use the identity $\delta(g(\tau))=\sum_i \delta(\tau-\tau_i)/|g'(\tau_i)|$ where $\tau_i$ are simple roots of $g$. With $g(\tau)=t-\tau - r(\tau)/c$ we find (after algebra) the standard retarded solution:
+Mathematically, use the identity $\delta(g(\tau))=\sum_i \delta(\tau-\tau_i)/|g'(\tau_i)|$ where $\tau_i$ are simple roots of $g$. With $g(\tau)=t-\tau - r(\tau)/c$ we find (after algebra) the standard path-history solution:
 
 $$
 \boxed{\;
@@ -151,7 +151,7 @@ $$
 
 where:
 
-* the sum runs over **retarded times** $\tau_i$ solving $t-\tau_i=r(\tau_i)/c$ (usually there is a single relevant root).
+* the sum runs over **path-history times** $\tau_i$ solving $t-\tau_i=r(\tau_i)/c$ (usually there is a single relevant root).
 * $r(\tau_i)=|\mathbf{x}-\mathbf{x}_s(\tau_i)|$.
 * $r'(\tau)=\dfrac{d}{d\tau}|\mathbf{x}-\mathbf{x}_s(\tau)| = -\,\mathbf{n}(\tau)\cdot\mathbf{v}_s(\tau)$.
 * $\mathbf{v}_s(\tau)=\dfrac{d\mathbf{x}_s}{d\tau}$ is the source velocity at emission time $\tau$.
@@ -173,7 +173,7 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 ### Handling an emitter that stops / $|\mathbf v_s|\to 0$
 
-* If the emitter slows or stops, the Jacobian factor $1 - \mathbf{n}\cdot\mathbf{v}_s/c$ tends to 1 and nothing singular happens. The retarded equation still has a solution and each shell arrives at the predicted time.
+* If the emitter slows or stops, the Jacobian factor $1 - \mathbf{n}\cdot\mathbf{v}_s/c$ tends to 1 and nothing singular happens. The path-history equation still has a solution and each shell arrives at the predicted time.
 * If the emitter sits still and emits many shells (continuous $q(\tau)$), the field is the time integral (or sum) of all shell contributions evaluated at their respective retarded times. No $1/|\mathbf{v}_s|$ blowup occurs.
 
 ---
@@ -182,14 +182,14 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 * **Method 1 (PDE)**: use this if you want to simulate the whole field over a spatial grid and time — e.g., visualize full 3D field, handle complicated background media (inhomogeneous $c$, damping), or include nonlinearities. Numerically straightforward: step the PDE forward, deposit source each time step. Very robust when the emitter stops or moves.
 
-* **Method 2 (Green’s function / retarded integral)**: use this if you want closed-form expressions, analytic insight, or to compute the field at a few observation points (not the whole grid). This method gives the exact retarded formula and explicitly shows the “shell arrival condition” $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and the Doppler-like Jacobian $1-\mathbf{n}\cdot\mathbf{v}_s/c$. For moving emitters it requires solving the retarded-time equation (root finding) for each observation point/time pair — cheaper if you have many emission events but few observers.
+* **Method 2 (Green’s function / path-history integral)**: use this if you want closed-form expressions, analytic insight, or to compute the field at a few observation points (not the whole grid). This method gives the exact path-history formula and explicitly shows the “shell arrival condition” $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and the Doppler-like Jacobian $1-\mathbf{n}\cdot\mathbf{v}_s/c$. For moving emitters it requires solving the path-history-time equation (root finding) for each observation point/time pair — cheaper if you have many emission events but few observers.
 
 ---
 
 # Short worked example (stationary emitter, continuous source)
 
 * Emitter at origin $\mathbf{x}_s=0$. Continuous source with $q(t)\equiv q_0$ (constant).
-* From the retarded formula, the field at radius $r=|\mathbf{x}|$ and time $t$ is
+* From the path-history formula, the field at radius $r=|\mathbf{x}|$ and time $t$ is
   $$
   \phi(r,t) \;=\; \frac{q_0}{4\pi r},
   $$
@@ -201,7 +201,7 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 * **Always smear the delta** in numerical work: replace $\delta(\mathbf{x}-\mathbf{x}_s)$ by a small, normalized kernel of width $\sigma$ comparable to your grid spacing. This avoids grid-scale noise and models a physically finite shell thickness.
 * **CFL condition** for wave PDE: choose $\Delta t$ so that $c \Delta t/\Delta x$ satisfies the stability bound for your discretization. If violated you'll get numerical instability.
-* **Retarded solving (Method 2)** requires root-finding for $\tau$ from $t-\tau = r(\tau)/c$. For slowly moving emitters this is easy (one iteration), but if the source moves fast near $c$ the root finding and the denominator $1-\mathbf{n}\cdot\mathbf{v}_s/c$ require care (causality and relativistic effects arise if $|\mathbf{v}_s|$ approaches $c$).
+* **Path-history solving (Method 2)** requires root-finding for $\tau$ from $t-\tau = r(\tau)/c$. For slowly moving emitters this is easy (one iteration), but if the source moves fast near $c$ the root finding and the denominator $1-\mathbf{n}\cdot\mathbf{v}_s/c$ require care (causality and relativistic effects arise if $|\mathbf{v}_s|$ approaches $c$).
 * **If shells have finite thickness** in time, replace $\delta(t-\tau)$ by a smooth temporal profile. That makes the outgoing wavefront a pulse of finite duration rather than an idealized instant.
 
 ---
@@ -210,7 +210,7 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 * Model the emitter as a time-based continuous emission density $q(\tau)$ at location $\mathbf{x}_s(\tau)$ (i.e., $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$).
 * Method 1 (solve the wave PDE with that source) is the easiest, robust way to get fields on a grid; the wave equation naturally produces expanding spherical shells at speed $c$.
-* Method 2 (use the Green’s function / retarded integral) gives an analytic expression: each emission at time $\tau$ produces a contribution at $(\mathbf{x},t)$ only if $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$; the observed amplitude includes the geometric $1/(4\pi r)$ decay and a Doppler/retardation factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$.
+* Method 2 (use the Green’s function / path-history integral) gives an analytic expression: each emission at time $\tau$ produces a contribution at $(\mathbf{x},t)$ only if $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$; the observed amplitude includes the geometric $1/(4\pi r)$ decay and a Doppler/path-history Jacobian $1-\mathbf{n}\cdot\mathbf{v}_s/c$.
 
 ---
 
@@ -318,10 +318,10 @@ Method 1 — Time-based PDE (wave equation)
   - Requires careful numerics to avoid dispersion/reflection; mesh choices can bias results.
   - Mapping grid fields to the radial-only per-hit ODE can add another modeling layer.
 
-Method 2 — Retarded Green’s function (integral)
+Method 2 — Green’s function (path-history integral)
 - Pros
   - Exact in homogeneous free space; no grid or time stepping for the field.
-  - Makes causality explicit via retarded times; captures Doppler/Jacobian $1-\mathbf{n}\!\cdot\!\mathbf{v}_s/c$ automatically.
+  - Makes causality explicit via path-history times; captures Doppler/Jacobian $1-\mathbf{n}\!\cdot\!\mathbf{v}_s/c$ automatically.
   - Efficient when you need the field at a few observation points; excellent for analysis and cross-checks.
 - Cons
   - Requires root-finding for each (observer, time) pair; multiple roots possible when sources outrun shells.
@@ -358,7 +358,7 @@ Plain language: Keep using the event-driven, radial-only method for dynamics, ch
 Recap (in three lines)
 - Model sources as $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$ (time-based emission density).
 - Method 1: easiest for grid-based whole-field runs; shells emerge at speed $c$.
-- Method 2: exact retarded formula; contributions occur only when $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$, with amplitude decaying as $1/(4\pi r)$ and a geometric $1-\mathbf{n}\cdot\mathbf{v}_s/c$ factor in evaluation.
+- Method 2: exact path-history formula; contributions occur only when $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$, with amplitude decaying as $1/(4\pi r)$ and a geometric $1-\mathbf{n}\cdot\mathbf{v}_s/c$ factor in evaluation.
 
 ---
 
