--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.12 - Walkthrough Step 12 — Revisiting our Action Model.md
@@ -178,41 +178,9 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 
 ---
 
-# Intuition: when to use which method
 
-* **Method 1 (PDE)**: use this if you want to simulate the whole field over a spatial grid and time — e.g., visualize full 3D field, handle complicated background media (inhomogeneous $c$, damping), or include nonlinearities. Numerically straightforward: step the PDE forward, deposit source each time step. Very robust when the emitter stops or moves.
 
-* **Method 2 (Green’s function / path-history integral)**: use this if you want closed-form expressions, analytic insight, or to compute the field at a few observation points (not the whole grid). This method gives the exact path-history formula and explicitly shows the “shell arrival condition” $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and the Doppler-like Jacobian $1-\mathbf{n}\cdot\mathbf{v}_s/c$. For moving emitters it requires solving the path-history-time equation (root finding) for each observation point/time pair — cheaper if you have many emission events but few observers.
 
----
-
-# Short worked example (stationary emitter, continuous source)
-
-* Emitter at origin $\mathbf{x}_s=0$. Continuous source with $q(t)\equiv q_0$ (constant).
-* From the path-history formula, the field at radius $r=|\mathbf{x}|$ and time $t$ is
-  $$
-  \phi(r,t) \;=\; \frac{q_0}{4\pi r},
-  $$
-  since the retarded condition selects $\tau = t - r/c$ and $q(\tau)=q_0$. If $q$ varies in time, then $\phi(r,t)=q(t-r/c)/(4\pi r)$.
-
----
-
-# Practical implementation tips / numerical cautions
-
-* **Always smear the delta** in numerical work: replace $\delta(\mathbf{x}-\mathbf{x}_s)$ by a small, normalized kernel of width $\sigma$ comparable to your grid spacing. This avoids grid-scale noise and models a physically finite shell thickness.
-* **CFL condition** for wave PDE: choose $\Delta t$ so that $c \Delta t/\Delta x$ satisfies the stability bound for your discretization. If violated you'll get numerical instability.
-* **Path-history solving (Method 2)** requires root-finding for $\tau$ from $t-\tau = r(\tau)/c$. For slowly moving emitters this is easy (one iteration), but if the source moves fast near $c$ the root finding and the denominator $1-\mathbf{n}\cdot\mathbf{v}_s/c$ require care (causality and relativistic effects arise if $|\mathbf{v}_s|$ approaches $c$).
-* **If shells have finite thickness** in time, replace $\delta(t-\tau)$ by a smooth temporal profile. That makes the outgoing wavefront a pulse of finite duration rather than an idealized instant.
-
----
-
-# Bottom line (in 3 sentences)
-
-* Model the emitter as a time-based continuous emission density $q(\tau)$ at location $\mathbf{x}_s(\tau)$ (i.e., $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$).
-* Method 1 (solve the wave PDE with that source) is the easiest, robust way to get fields on a grid; the wave equation naturally produces expanding spherical shells at speed $c$.
-* Method 2 (use the Green’s function / path-history integral) gives an analytic expression: each emission at time $\tau$ produces a contribution at $(\mathbf{x},t)$ only if $t-\tau = |\mathbf{x}-\mathbf{x}_s(\tau)|/c$; the observed amplitude includes the geometric $1/(4\pi r)$ decay and a Doppler/path-history Jacobian $1-\mathbf{n}\cdot\mathbf{v}_s/c$.
-
----
 
 # 3) Event-driven radial-transport + per-hit EOM (current canonical method)
 
@@ -256,6 +224,29 @@ Relation to Methods 1 and 2
 - Numerically, this method targets particle dynamics directly (per-hit ODEs) rather than evolving a full field (Method 1) or evaluating fields at sparse probes (Method 2).
 
 Plain language: Treat the field as razor-thin “paint” spread over a growing sphere so the total amount stays the same. Every time a shell reaches you, you get a straight-line shove that falls off like one over distance squared; we either treat it as a sharp kick or a short, smooth nudge.
+
+## Cross-method guidance: when to use which method, a unifying example, and practical tips
+
+When to use which method (quick pick)
+- Method 1 (PDE): whole-field grid simulations, visualization, and complex media/boundaries. Deposit a smeared source each step; robust when an emitter slows or stops.
+- Method 2 (Green’s function / path-history integral): closed forms and sparse probe evaluation. Enforce the path-history condition $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and handle the geometric factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ during evaluation; root-solve one (or more) $\tau$ per (observer, time) pair.
+- Method 3 (Event-driven canonical): production many-body dynamics. Find causal roots and sum per-hit $1/r^2$ pushes; prefer $\eta$-mollified mode for smooth ODEs when needed.
+
+Short worked example — stationary emitter, continuous source (consistent across methods)
+- Setup: emitter at origin $\mathbf{x}_s=0$ with $q(t)\equiv q_0$ (constant).
+- Method 2: the path-history formula gives $\displaystyle \phi(r,t)=\frac{q_0}{4\pi r}$ with the path-history time $\tau=t-r/c$.
+- Method 1: solving the wave PDE with $S(\mathbf{x},t)=q_0\,\delta(\mathbf{x})$ reproduces the same spherical profile $\phi(r,t)=q_0/(4\pi r)$ on the outgoing wavefront.
+- Method 3: the path-history condition selects the single causal time $t_0=t-r/c$; the per-hit EOM yields one radial push along $\hat{\mathbf{r}}$ with $1/r^2$ scaling, consistent with taking spatial gradients of the $1/r$ potential to connect amplitude to force.
+
+Practical implementation notes (concise)
+- PDE: smear $\delta(\mathbf{x}-\mathbf{x}_s)$ to grid scale; enforce CFL ($c\,\Delta t/\Delta x$ within the scheme’s bound).
+- Path-history: robust root-finding for $\tau$ from $t-\tau=r(\tau)/c$; take care near grazing geometries where $1-\mathbf{n}\cdot\mathbf{v}_s/c$ is small.
+- Event-driven: bracket causal roots for continuity, optionally use $\delta_\eta$ for smooth pushes, and limit step sizes so only a controlled number of mollified shells overlap.
+
+Bottom line (3 lines)
+- Model sources as $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$ (time-based emission density).
+- Use Method 3 as the primary dynamics engine; use Method 2 for calibration/spot checks; use Method 1 for whole-field/media studies.
+- All three agree on simple stationary cases; they differ mainly in computational scope: grids (1), closed-form probes (2), and event-driven ODEs (3).
 
 ---
 
