--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.0 - Opposite Charges From Rest at Large Separation.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.0 - Opposite Charges From Rest at Large Separation.md
@@ -19,6 +19,68 @@ Canonical delayed-law considerations:
   - Per-hit amplitude ≈ κ ε² / r² (up to sign).
   - Corrections scale with β and curvature of worldlines; estimate accumulated phase lag over Δt.
 
+Equations of motion (canonical delayed law; two-body, v=1):
+- Notation (opposite charges): q₁=−ε (particle 1), q₂=+ε (particle 2), positions $\mathbf{s}_1(t)$, $\mathbf{s}_2(t)$.
+- Causal (path-history) times:
+  - $t_0^{(2\to 1)}\in\mathcal{C}_2(t)$ solves $\|\mathbf{s}_1(t)-\mathbf{s}_2(t_0)\|=t-t_0$.
+  - $t_0^{(1\to 2)}\in\mathcal{C}_1(t)$ solves $\|\mathbf{s}_2(t)-\mathbf{s}_1(t_0)\|=t-t_0$.
+- Per-particle accelerations (sum over all causal roots if multiple exist):
+  $$
+  \mathbf{a}_1(t)
+  \;=\;
+  \sum_{t_0\in\mathcal{C}_2(t)}
+  \kappa\,\sigma_{q_2 q_1}\,\frac{|q_2 q_1|}{r_{12}^2}\,\hat{\mathbf{r}}_{12}
+  \;=\;
+  -\,\kappa\,\epsilon^2\,\frac{\hat{\mathbf{r}}_{12}}{r_{12}^2},
+  \quad
+  \hat{\mathbf{r}}_{12}=\frac{\mathbf{s}_1(t)-\mathbf{s}_2(t_0)}{r_{12}},
+  \ r_{12}=\|\mathbf{s}_1(t)-\mathbf{s}_2(t_0)\|.
+  $$
+  $$
+  \mathbf{a}_2(t)
+  \;=\;
+  \sum_{t_0\in\mathcal{C}_1(t)}
+  \kappa\,\sigma_{q_1 q_2}\,\frac{|q_1 q_2|}{r_{21}^2}\,\hat{\mathbf{r}}_{21}
+  \;=\;
+  -\,\kappa\,\epsilon^2\,\frac{\hat{\mathbf{r}}_{21}}{r_{21}^2},
+  \quad
+  \hat{\mathbf{r}}_{21}=\frac{\mathbf{s}_2(t)-\mathbf{s}_1(t_0)}{r_{21}},
+  \ r_{21}=\|\mathbf{s}_2(t)-\mathbf{s}_1(t_0)\|.
+  $$
+  Here $\sigma_{q_2 q_1}=\sigma_{q_1 q_2}=-1$ (unlike charges attract), and $H(0)=0$ excludes $t_0=t$.
+
+Relative-coordinate form (quasi-instantaneous, small-β limit):
+- With unique roots and $|\mathbf{v}|\ll 1$, approximate $\mathbf{s}_j(t_0)\approx \mathbf{s}_j(t)$:
+  $$
+  \mathbf{a}_1(t)\approx -\,\kappa\,\epsilon^2\,\frac{\mathbf{r}}{\|\mathbf{r}\|^3},
+  \qquad
+  \mathbf{a}_2(t)\approx +\,\kappa\,\epsilon^2\,\frac{\mathbf{r}}{\|\mathbf{r}\|^3},
+  \quad
+  \mathbf{r}(t)=\mathbf{s}_1(t)-\mathbf{s}_2(t).
+  $$
+  Hence the relative motion satisfies
+  $$
+  \ddot{\mathbf{r}}(t)\;=\;\mathbf{a}_1(t)-\mathbf{a}_2(t)\;\approx\;-\,2\,\kappa\,\epsilon^2\,\frac{\mathbf{r}}{\|\mathbf{r}\|^3},
+  $$
+  i.e., a central, attractive, inverse-square “two-body spring” in the instantaneous baseline.
+
+Spring analogy (nonlinear and linearized):
+- Nonlinear, path-history–anchored spring:
+  $$
+  \mathbf{a}_1(t)\;=\;-\,\kappa\,\epsilon^2\,\frac{\mathbf{s}_1(t)-\mathbf{s}_2(t_0^{(2\to 1)})}{\|\mathbf{s}_1(t)-\mathbf{s}_2(t_0^{(2\to 1)})\|^3},
+  \qquad
+  \mathbf{a}_2(t)\;=\;-\,\kappa\,\epsilon^2\,\frac{\mathbf{s}_2(t)-\mathbf{s}_1(t_0^{(1\to 2)})}{\|\mathbf{s}_2(t)-\mathbf{s}_1(t_0^{(1\to 2)})\|^3}.
+  $$
+  This is a spring-like law with a history-anchored “attachment point” and a stiffness that varies with separation ($\propto 1/r^2$).
+- Linearization about a working separation $r_\star$ (small radial perturbation $\delta r$ in the instantaneous baseline):
+  $$
+  \delta \ddot r\;\approx\;-\,\frac{2\,\kappa\,\epsilon^2}{r_\star^3}\,\delta r
+  \quad\Longleftrightarrow\quad
+  \delta \ddot r + \omega_r^2\,\delta r = 0,\;\;
+  \omega_r^2=\frac{2\,\kappa\,\epsilon^2}{r_\star^3}.
+  $$
+  Thus, near $r_\star$ the radial motion behaves like a harmonic oscillator with an effective (geometry-dependent) spring constant $k_{\mathrm{eff}}\propto r_\star^{-3}$; delay modifies this locally harmonic picture as speeds grow and tangential components appear.
+
 Deliverables:
 - Formula list from the baseline radial fall for quick comparison.
 - Asymptotic estimates: earliest-time r(t) ≈ r0 − (1/2) a0 t² with a0 = κ ε² / r0², plus first corrections from delay.
