--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.0 - Opposite Charges From Rest at Large Separation.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.3.0 - Opposite Charges From Rest at Large Separation.md
@@ -81,6 +81,40 @@ Spring analogy (nonlinear and linearized):
   $$
   Thus, near $r_\star$ the radial motion behaves like a harmonic oscillator with an effective (geometry-dependent) spring constant $k_{\mathrm{eff}}\propto r_\star^{-3}$; delay modifies this locally harmonic picture as speeds grow and tangential components appear.
 
+Central-origin kinematics (positions and velocities; symmetric two-body frame)
+- Choose a fixed origin at the geometric midpoint. With equal-magnitude charges and symmetric initial data, this midpoint remains at rest by symmetry.
+- Define the instantaneous separation vector
+  $$
+  \mathbf{r}(t) \equiv \mathbf{s}_1(t) - \mathbf{s}_2(t) = r(t)\,\hat{\mathbf{n}}(t),\qquad r(t)=\|\mathbf{r}(t)\|,\ \ \hat{\mathbf{n}}=\frac{\mathbf{r}}{r}.
+  $$
+  Positions relative to the central origin are then
+  $$
+  \mathbf{s}_1(t) = \tfrac{1}{2}\,r(t)\,\hat{\mathbf{n}}(t),\qquad
+  \mathbf{s}_2(t) = -\,\tfrac{1}{2}\,r(t)\,\hat{\mathbf{n}}(t).
+  $$
+- Let the motion lie in a plane with polar angle $\theta(t)$ for $\hat{\mathbf{n}}(t)$. Define the unit tangent $\hat{\mathbf{t}}(t)$ by
+  $$
+  \dot{\hat{\mathbf{n}}}(t) = \dot{\theta}(t)\,\hat{\mathbf{t}}(t),\qquad
+  \dot{\hat{\mathbf{t}}}(t) = -\,\dot{\theta}(t)\,\hat{\mathbf{n}}(t),
+  $$
+  so that $\{\hat{\mathbf{n}},\hat{\mathbf{t}}\}$ is an orthonormal moving frame in the orbital plane.
+- Velocities follow by differentiation:
+  $$
+  \mathbf{v}_1(t) = \dot{\mathbf{s}}_1(t)
+  = \tfrac{1}{2}\,\dot{r}(t)\,\hat{\mathbf{n}}(t) + \tfrac{1}{2}\,r(t)\,\dot{\theta}(t)\,\hat{\mathbf{t}}(t),
+  $$
+  $$
+  \mathbf{v}_2(t) = \dot{\mathbf{s}}_2(t)
+  = -\,\tfrac{1}{2}\,\dot{r}(t)\,\hat{\mathbf{n}}(t) - \tfrac{1}{2}\,r(t)\,\dot{\theta}(t)\,\hat{\mathbf{t}}(t).
+  $$
+  These are kinematic identities independent of the specific force law. In the canonical delayed law, $\theta(t)$ evolves because each acceleration aims toward the partner’s past position, generating a tangential component that sustains angular motion while $r(t)$ changes under the radial component.
+- Symmetric initial conditions (example):
+  $$
+  \mathbf{s}_1(0)=\tfrac{r_0}{2}\,\hat{\mathbf{e}}_x,\quad
+  \mathbf{s}_2(0)=-\tfrac{r_0}{2}\,\hat{\mathbf{e}}_x,\quad
+  \mathbf{v}_1(0)=\mathbf{v}_2(0)=\mathbf{0}.
+  $$
+
 Deliverables:
 - Formula list from the baseline radial fall for quick comparison.
 - Asymptotic estimates: earliest-time r(t) ≈ r0 − (1/2) a0 t² with a0 = κ ε² / r0², plus first corrections from delay.
