--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -192,6 +192,6 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 
 - Notation lint (common mistakes):
   - Use bold for vectors: $\mathbf{v}$, not plain v.
-  - Reserve $v$ for the field speed (scalar). Use $\|\mathbf{v}\|$ for speed magnitude, or $\beta=\|\mathbf{v}\|/v$; with $v=1$, $\beta=\|\mathbf{v}\|$.
+  - Reserve $v$ for the field speed (scalar). Use $\|\mathbf{v}\|$ for speed magnitude.
   - Emission cadence and per-wavefront amplitude are constant.
   - Do not write mixed forms like $|v|$ to mean speed; bold the vector and take its norm.
