--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Revisiting our Action Model.md
@@ -1,8 +1,8 @@
 
 
-# Walkthrough Step 12 — Comparative modeling frameworks for delayed, radial action
+# Revisiting our Action Model — Comparative modeling frameworks for delayed, radial action
 
-We synthesize Steps 1–11 and the canonical Action to compare—side by side—the three modeling options for the emission–propagation–interaction pipeline and to recommend a primary approach (with supporting roles for the others). We work in units with field speed v=1 unless stated otherwise; emission cadence and per-wavefront amplitude are constant; per-hit actions are purely radial along $\hat{\mathbf{r}}$ with 1/r² falloff; H(0)=0 excludes the coincident-time self-kick; no cross products/right-hand-rule terms appear.
+We synthesize Steps 1–10 and the canonical Action to compare—side by side—the three modeling options for the emission–propagation–interaction pipeline and to recommend a primary approach (with supporting roles for the others). We work in units with field speed v=1 unless stated otherwise; emission cadence and per-wavefront amplitude are constant; per-hit actions are purely radial along $\hat{\mathbf{r}}$ with 1/r² falloff; H(0)=0 excludes the coincident-time self-kick; no cross products/right-hand-rule terms appear.
 
 ---
 
@@ -81,7 +81,7 @@ Here $q(t)$ has units “amplitude per unit time.” The finite-speed wave opera
 
 # 2) Integral (Green’s function / path-history potential) approach
 
-**Physical idea:** instead of evolving a PDE in time, write the solution as the sum of contributions from every past emission. For the wave equation the contribution from an impulse emitted at time $\tau$ and place $\mathbf{x}_s(\tau)$ arrives at a field point $\mathbf{x}$ only at the **retarded time** when the spherical shell reaches $\mathbf{x}$. The Green’s function neatly encodes the expanding shell.
+**Physical idea:** instead of evolving a PDE in time, write the solution as the sum of contributions from every past emission. For the wave equation the contribution from an impulse emitted at time $\tau$ and place $\mathbf{x}_s(\tau)$ arrives at a field point $\mathbf{x}$ only at the **path-history time** when the spherical shell reaches $\mathbf{x}$. The Green’s function neatly encodes the expanding shell.
 
 ### Fundamental formula (general)
 
@@ -234,8 +234,8 @@ When to use which method (quick pick)
 
 Short worked example — stationary emitter, continuous source (consistent across methods)
 - Setup: emitter at origin $\mathbf{x}_s=0$ with $q(t)\equiv q_0$ (constant).
-- Method 2: the path-history formula gives $\displaystyle \phi(r,t)=\frac{q_0}{4\pi r}$ with the path-history time $\tau=t-r/c$.
 - Method 1: solving the wave PDE with $S(\mathbf{x},t)=q_0\,\delta(\mathbf{x})$ reproduces the same spherical profile $\phi(r,t)=q_0/(4\pi r)$ on the outgoing wavefront.
+- Method 2: the path-history formula gives $\displaystyle \phi(r,t)=\frac{q_0}{4\pi r}$ with the path-history time $\tau=t-r/c$.
 - Method 3: the path-history condition selects the single causal time $t_0=t-r/c$; the per-hit EOM yields one radial push along $\hat{\mathbf{r}}$ with $1/r^2$ scaling, consistent with taking spatial gradients of the $1/r$ potential to connect amplitude to force.
 
 Practical implementation notes (concise)
@@ -254,7 +254,7 @@ Bottom line (3 lines)
 
 Axiomatic fidelity (delayed-only, radial-only, constant per-wavefront amplitude)
 - Method 1: Partially aligned. The PDE yields 1/(4πr) wave amplitudes; mapping to 1/r² per-hit accelerations requires gradients and conventions. Radial-only action is not built-in.
-- Method 2: Causality and superposition are exact; amplitudes are 1/(4πr) with a Jacobian |1−$\mathbf{n}\cdot\mathbf{v}_s$/$c$|⁻¹ when evaluating the retarded-time delta. To preserve constant per-wavefront amplitude in the canonical law, geometric factors are absorbed into κ when comparing accelerations.
+- Method 2: Causality and superposition are exact; amplitudes are 1/(4πr) with a Jacobian |1−$\mathbf{n}\cdot\mathbf{v}_s$/$c$|⁻¹ when evaluating the path-history time delta. To preserve constant per-wavefront amplitude in the canonical law, geometric factors are absorbed into κ when comparing accelerations.
 - Method 3: Exact match. Delayed-only, radial-only per-hit with constant per-wavefront amplitude is native. Geometric normalizations are conventionally absorbed into κ.
 
 Causal root structure, self-interaction, multiplicity
@@ -294,7 +294,7 @@ Summary (one line each)
 
 Operational guidance — when to use which method
 - Method 1 (PDE): use this for whole-field grid simulations, visualization, and complex media or boundaries; step the wave PDE forward with a smeared source. Robust when an emitter slows or stops.
-- Method 2 (Path history integral): use this for closed forms, analytic insight, or sparse probe evaluation; enforce the retarded-time condition $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and handle the geometric factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ in evaluation; solve one root per (observer, time) pair in slow-motion, more if sources move fast.
+- Method 2 (Path history integral): use this for closed forms, analytic insight, or sparse probe evaluation; enforce the path-history condition $t-\tau=|\mathbf{x}-\mathbf{x}_s(\tau)|/c$ and handle the geometric factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ in evaluation; solve one root per (observer, time) pair in slow-motion, more if sources move fast.
 - Method 3 (Event-driven canonical): use this for production many-body dynamics; find causal roots and sum per-hit $1/r^2$ pushes; prefer $\eta$-mollified mode for smooth ODEs when needed.
 
 ## Pros and cons (comparative)
@@ -344,7 +344,7 @@ Method 3 — Event-driven radial-transport + per-hit EOM (current canonical)
   - Path history solving: solve $t-\tau=r(\tau)/c$ carefully; near $|\mathbf{v}_s|\approx c$, root finding and the factor $1-\mathbf{n}\cdot\mathbf{v}_s/c$ require extra care.
   - Finite temporal thickness: if shells have duration, replace $\delta(t-\tau)$ with a smooth profile to model finite-width wavefronts.
 
-Plain language: Keep using the event-driven, radial-only method for dynamics, check it against the retarded integral to set the knobs, and bring out the PDE only when you need whole-field pictures or complex media.
+Plain language: Keep using the event-driven, radial-only method for dynamics, check it against the path-history integral to set the knobs, and bring out the PDE only when you need whole-field pictures or complex media.
 
 Recap (in three lines)
 - Model sources as $S(\mathbf{x},t)=q(t)\,\delta\!\big(\mathbf{x}-\mathbf{x}_s(t)\big)$ (time-based emission density).
@@ -367,39 +367,6 @@ Legend: [+] passes, [~] depends (energy/frequency/geometry), [x] mostly blocked/
 | L1: Noether Core shielding (triply nested binaries; shielded) | [x] far-field cancels; no corridor capture | [~] tiny axial coupling only | [x] self/partner couplings dominate; no transit | [+] by hypothesis: minimal coupling |
 | L0: Axial corridors / flux-tube loci (coherent geometry) | [+] guided along corridor | [~] weak corridor coupling; alignment matters | [x] no cross-product forces; not a transit channel | [~] minimal, geometry-dependent |
 
-```
-+===============================================================+
-| L4: Bulk molecular shell (solids/liquids; many-body opacity)  |
-|   Photons:        [~] (material window; optical opaque, IR/UV/X/γ vary)   |
-|   Neutrinos:      [+] (nearly transparent)                                 |
-|   Charged ±ε:     [x] (bind/deflect; do not traverse as free particles)    |
-|   Dark-matter-like neutral (hypothetical): [+] (very weak coupling)        |
-+---------------------------------------------------------------+
-| L3: Atomic electron cloud (bound electrons)                    |
-|   Photons:        [~] (photoelectric/Compton; X/γ penetrate better)        |
-|   Neutrinos:      [+]                                                     |
-|   Charged ±ε:     [x] (Coulomb-coupled; captured/scattered)                |
-|   Dark-matter-like neutral: [+]                                           |
-+---------------------------------------------------------------+
-| L2: Nuclear layer (nucleons; femtoscopic scale)                |
-|   Photons:        [~] (γ can interact; strong attenuation in bulk)         |
-|   Neutrinos:      [+] (weak interaction; mostly pass)                      |
-|   Charged ±ε:     [x] (excluded as free traversers)                        |
-|   Dark-matter-like neutral: [+]                                           |
-+---------------------------------------------------------------+
-| L1: Noether Core shielding (triply nested binaries; shielded)  |
-|   Photons:        [x] (far-field cancels; no corridor capture)             |
-|   Neutrinos:      [~] (tiny axial coupling only)                           |
-|   Charged ±ε:     [x] (self/partner couplings dominate; no transit)        |
-|   Dark-matter-like neutral: [+] (by hypothesis: minimal coupling)          |
-+---------------------------------------------------------------+
-| L0: Axial corridors / flux-tube loci (coherent geometry)       |
-|   Photons:        [+] (guided along corridor)                               |
-|   Neutrinos:      [~] (weak corridor coupling; alignment matters)           |
-|   Charged ±ε:     [x] (no cross-product forces; not a transit channel)      |
-|   Dark-matter-like neutral: [~] (minimal, geometry-dependent)               |
-+===============================================================+
-```
 
 Notes (interpretation):
 - “Dark-matter-like neutral” denotes very weakly coupled, neutral meta-assemblies consistent with this framework; included here as a hypothesis for qualitative comparison.
