--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Revisiting our Action Model.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.2 - Revisiting our Action Model.md
@@ -174,7 +174,7 @@ If $\mathbf{x}_s(\tau)=\mathbf{x}_0$ (emitter fixed) and $q(\tau)=Q\,\delta(\tau
 ### Handling an emitter that stops / $|\mathbf v_s|\to 0$
 
 * If the emitter slows or stops, the Jacobian factor $1 - \mathbf{n}\cdot\mathbf{v}_s/c$ tends to 1 and nothing singular happens. The path-history equation still has a solution and each shell arrives at the predicted time.
-* If the emitter sits still and emits many shells (continuous $q(\tau)$), the field is the time integral (or sum) of all shell contributions evaluated at their respective retarded times. No $1/|\mathbf{v}_s|$ blowup occurs.
+* If the emitter sits still and emits many shells (continuous $q(\tau)$), the field is the time integral (or sum) of all shell contributions evaluated at their respective causal times. No $1/|\mathbf{v}_s|$ blowup occurs.
 
 ---
 
@@ -259,7 +259,7 @@ Axiomatic fidelity (delayed-only, radial-only, constant per-wavefront amplitude)
 
 Causal root structure, self-interaction, multiplicity
 - Method 1: Self-hits and multiple roots are implicit in the evolving field; they are not directly enumerated as discrete events.
-- Method 2: Retarded roots arise via solving $t-\tau=r(\tau)/c$; multiple roots and tangencies are explicit but require robust root-finding.
+- Method 2: Causal roots arise via solving $t-\tau=r(\tau)/c$; multiple roots and tangencies are explicit but require robust root-finding.
 - Method 3: Roots are primitive; multi-hit and self-hit regimes are treated natively. Conventions H(0)=0 and exclusion of $r=0$ beyond $\tau=0$ are explicit.
 
 Energetics and work
