--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -174,7 +174,7 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 ## 8) Exclusions and scope
 
 - No Lorentzian 4-vectors or Minkowski metric in the core specification.
-- No $\mathbf{v}\times\mathbf{B}$, no magnetic right-hand rule constructs; “magnetic-like” phenomena are emergent from retardation geometry.
+- No $\mathbf{v}\times\mathbf{B}$, no magnetic right-hand rule constructs; “magnetic-like” phenomena are emergent from causal path history geometry.
 - Keep alternate presentations (forms/differential geometry) in clearly marked appendices if needed.
 
 ---
