--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -1,3 +1,5 @@
+$$\boxed{\displaystyle \mathbf{a}_{o'}(t) \;=\; \sum_{o}\ \sum_{t_0 \in \mathcal{C}_o(t)} \kappa\,\sigma_{q_o q_{o'}}\,\frac{|q_o q_{o'}|}{r^2}\,\hat{\mathbf{r}}}$$
+
 # Action and Interaction
 
 The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
