--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.4 - Walkthrough Step 4 — Master equation of motion.md
@@ -18,4 +18,11 @@ Detailed explanation (terms and conventions):
 - Superposition:
   - Total acceleration is the sum over all sources and all causal roots (linearity at the level of shells).
 
+- DDE view (causal functional form):
+  - Let state $x = (\mathbf{s}, \mathbf{v})$. With $\eta>0$ regularization, the dynamics admit a causal functional form
+    $$
+    \frac{d x}{d t} = F\big(x(t), \{x_j(t - \tau_j)\}_j, t\big),
+    $$
+    with $\tau_j$ determined implicitly by $\|\mathbf{s}(t) - \mathbf{s}_j(t - \tau_j)\| = v\,\tau_j$, and per-hit contributions summed over all roots. In the $\eta\to 0$ limit interpret in the weak sense.
+
 Plain language: For each earlier emission that can reach you now, push straight along the line back to where it came from, with strength set by the charges and the inverse-square distance.
