--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.9 - Walkthrough Step 9 — Informational ambiguity.md
@@ -28,4 +28,4 @@ Detailed explanation (degeneracies and inference limits):
     - Use surrogate-location recasts: for instantaneous hits, place a stationary surrogate source somewhere along the same unoriented line of action and adjust only the emission time; this simplifies hypothesis testing without altering per-wavefront amplitude.
   - Absolute-observer note: Access to absolute time and a common Euclidean frame enables global correlation of events across receivers, but unique inversion at an instant would require hidden information (the full emission ledger $\{(t_0,\mathbf{s}_j(t_0),q_j,\mathbf{v}_j(t_0))\}_j$). Practical reconstruction is therefore necessarily temporal, statistical, and multi-view.
 
-Plain language: A hit tells you how hard and from which direction you’re being pushed—but not who pushed you or how far away they are. Many different source stories can fit the same momentary shove.
+Plain language: A hit tells you how hard and from which direction you’re being pushed—but not who pushed you or how far away they are. Many different source stories can fit the same momentary shove. A null action at an instant conveys no information about sources; superposition can cancel perfectly even in a non-empty universe.
