--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -116,6 +116,12 @@ $$
 \mathbf{a}_{o′}(t) = \sum_{j}\ \sum_{t_0 \in \mathcal{C}_j(t)} a_{o′\leftarrow j}(t; t_0).
 $$
 
+DDE view: let state $x = (\mathbf{s}, \mathbf{v})$. With $\eta>0$ regularization, the dynamics admit a causal functional form
+$$
+\frac{d x}{d t} = F\big(x(t), \{x_j(t - \tau_j)\}_j, t\big),
+$$
+with $\tau_j$ determined implicitly by $\lVert \mathbf{s}(t) - \mathbf{s}_j(t - \tau_j)\rVert = v\,\tau_j$, and per-hit contributions summed over all roots. In the $\eta\to 0$ limit interpret in the weak sense.
+
 Notes:
 - Emission cadence and per-wavefront amplitude are constant The receiver’s velocity influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - No cross products, no right-hand-rule magnetism; every per-hit action is along $\hat{\mathbf{r}}$.
