--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -31,6 +31,11 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | $d_0,\, t_0$ (emergent) | Minimal binary radius and characteristic fastest period from dynamics. | Emergent scales set by balance of delayed attraction and self-repulsion. They depend on $\kappa\,\epsilon^2$ and motion details but act as robust attractors in symmetric binaries. |
 | $\mathrm{SS}_a(t)$ | “Sphere stream” of worldline $a$ at observation time $t$ (union of all causal spheres). | The family of all causal spheres emitted along a worldline, evaluated at time $t$; a geometric picture of which shells can currently act at each point. |
 | $\Delta$ | Euclidean Laplacian on $\Sigma_t$ ($\Delta = \partial_x^2 + \partial_y^2 + \partial_z^2$). | The standard Euclidean Laplacian acting on functions on $\Sigma_t$; it appears in continuum limits and energetics checks for mollified fields. |
+| $\nabla$ | Nabla operator (gradient/divergence/curl). | Vector differential operator used to define $\nabla f$, $\nabla\cdot \mathbf{F}$, and $\nabla\times \mathbf{F}$. We avoid $\mathbf{v}\times\mathbf{B}$ constructs in the canonical law. |
+| $\nabla f$ | Gradient of scalar $f$. | Vector field of partial derivatives; points in direction of steepest increase; used for spatial derivatives on $\Sigma_t$. |
+| $\nabla\cdot \mathbf{F}$ | Divergence of vector field $\mathbf{F}$. | Scalar measuring net outflow; Gauss-like flux form; identity: $\nabla\cdot(\nabla\times \mathbf{F}) = 0$. |
+| $\nabla\times \mathbf{F}$ | Curl of vector field $\mathbf{F}$. | Vector measuring local rotation; identity: $\nabla\times(\nabla f) = \mathbf{0}$. Canonical law uses no right-hand-rule cross-product forces. |
+| $\nabla^2 f$ | Laplacian of $f$ (alt. notation for $\Delta f$). | Equal to $\partial_x^2 f + \partial_y^2 f + \partial_z^2 f$ in Cartesian frames; we generally write $\Delta f$. |
 | $E(3)$ | Euclidean group of spatial symmetries (translations ⋊ rotations). | The spatial isometry group of $h_{ij}$. Statements are frame-invariant under translations and rotations, even though finite field speed singles out a preferred rest frame for dynamics. |
 | $c_{\max} \equiv v$ | Maximal signal speed (field speed of shells). | Upper bound on signal propagation; defines the causal sphere radius $r=c_{\max}(t-t_0)$ and replaces lightcones by expanding spheres in this model. |
 | EOM | Master Equation of Motion: delayed, purely radial, inverse-square per-hit law. | Shorthand for the canonical, delayed, radial-only equation of motion. It is event-driven at $\eta=0$ and becomes a smooth ODE system under mollification. |
